--- a/Translation/tooltip.json
+++ b/Translation/tooltip.json
@@ -71,6 +71,24 @@
         "th":"",
         "id":"Level yg dibutuhkan"
     },
+    "tooltip.item.mod-stats":{
+        "en":"Mod Stats",
+        "fr":"Mod Stats",
+        "es":"",
+        "ch":"",
+        "kr":"",
+        "ru":"",
+        "tr":"",
+        "de":"",
+        "jp":"",
+        "pt":"",
+        "vi":"",
+        "ar":"",
+        "it":"",
+        "pl":"",
+        "th":"",
+        "id":""
+    },
     "tooltip.item.ench-stats":{
         "en":"ENCH Stats",
         "fr":"AMELIO Stats",
