--- a/Translation/general.json
+++ b/Translation/general.json
@@ -467,6 +467,42 @@
         "th":"",
         "id":"Membeli"
     },
+    "general.accept":{
+        "en":"Accept",
+        "fr":"Accepter",
+        "es":"",
+        "ch":"",
+        "kr":"",
+        "ru":"",
+        "tr":"",
+        "de":"",
+        "jp":"",
+        "pt":"",
+        "vi":"",
+        "ar":"",
+        "it":"",
+        "pl":"",
+        "th":"",
+        "id":""
+    },
+    "general.cancel":{
+        "en":"Cancel",
+        "fr":"Annuler",
+        "es":"",
+        "ch":"",
+        "kr":"",
+        "ru":"",
+        "tr":"",
+        "de":"",
+        "jp":"",
+        "pt":"",
+        "vi":"",
+        "ar":"",
+        "it":"",
+        "pl":"",
+        "th":"",
+        "id":""
+    },
     "general.cost.none":{
         "en":"No cost",
         "fr":"Aucun coût",
