--- a/Translation/skills.json
+++ b/Translation/skills.json
@@ -1351,7 +1351,7 @@
     },
     "skills.warrior.AIR_SLASH.name":{
         "en":"Air Slash",
-        "fr":"Coup Brise-Ailes",
+        "fr":"Tranche",
         "es":"",
         "ch":"",
         "kr":"",
