--- a/Translation/skills.json
+++ b/Translation/skills.json
@@ -595,7 +595,7 @@
     },
     "skills.mage.FROST_BREATH.name":{
         "en":"Frost Breath",
-        "fr":"Rugissement Glacé",
+        "fr":"Souffle Glacé",
         "es":"",
         "ch":"",
         "kr":"",
@@ -757,7 +757,7 @@
     },
     "skills.ranger.EAGLE_EYE.name":{
         "en":"Eagle Eye",
-        "fr":"Oeil d'Aigle",
+        "fr":"Oeil de Faucon",
         "es":"",
         "ch":"",
         "kr":"",
@@ -973,7 +973,7 @@
     },
     "skills.ranger.CRACK_SHOT.name":{
         "en":"Crack Shot",
-        "fr":"Tir rapide",
+        "fr":"Coup de feu",
         "es":"",
         "ch":"",
         "kr":"",
@@ -1027,7 +1027,7 @@
     },
     "skills.ranger.EVASION.name":{
         "en":"Evasion",
-        "fr":"Evasion",
+        "fr":"Esquive",
         "es":"",
         "ch":"",
         "kr":"",
@@ -1942,59 +1942,5 @@
         "pl":"",
         "th":"",
         "id":"Menimbulkan {0}% kerusakan tambahan dan {1} kerusakan skill tambahan."
-    },
-    "skills.SOUL_GATHERING.name":{
-        "en":"Soul Gathering",
-        "fr":"Collecte d'Âme",
-        "es":"",
-        "ch":"",
-        "kr":"",
-        "ru":"",
-        "tr":"",
-        "de":"",
-        "jp":"",
-        "pt":"",
-        "vi":"",
-        "ar":"",
-        "it":"",
-        "pl":"",
-        "th":"",
-        "id":""
-    },
-    "skills.SOUL_GATHERING.description-1":{
-        "en":"Activate Soul Gathering. Can see the target's soul while killing monsters. Looting soul provides EXP. And also picking up souls of the same color in a row will increase the EXP benefit.",
-        "fr":"Active la Collecte d'Âme. Permets de voir l'âme de sa cible en tuant des monstres. Récupérer ces âmes procure de l'EXP. Récupérer les âmes de la même couleur de façon consécutive augmente la quantité d'EXP reçue.",
-        "es":"",
-        "ch":"",
-        "kr":"",
-        "ru":"",
-        "tr":"",
-        "de":"",
-        "jp":"",
-        "pt":"",
-        "vi":"",
-        "ar":"",
-        "it":"",
-        "pl":"",
-        "th":"",
-        "id":""
-    },
-    "skills.SOUL_GATHERING.description-2":{
-        "en":"Can be used up to 3 times a day",
-        "fr":"Peut-être utilisé jusqu'à 3 fois par jour",
-        "es":"",
-        "ch":"",
-        "kr":"",
-        "ru":"",
-        "tr":"",
-        "de":"",
-        "jp":"",
-        "pt":"",
-        "vi":"",
-        "ar":"",
-        "it":"",
-        "pl":"",
-        "th":"",
-        "id":""
     }
 }
