--- a/Translation/tooltip.json
+++ b/Translation/tooltip.json
@@ -2,12 +2,12 @@
     "tooltip.item.position":{
         "en":"Gear Position",
         "fr":"Emplacement",
-        "es":"Posicion",
+        "es":"",
         "ch":"",
         "kr":"",
-        "ru":"Слот Экипировки",
+        "ru":"",
         "tr":"",
-        "de":"",
+        "de":"Standort",
         "jp":"",
         "pt":"",
         "vi":"Trang bị",
@@ -20,12 +20,12 @@
     "tooltip.item.class":{
         "en":"Required Class",
         "fr":"Classe Requise",
-        "es":"Clase",
+        "es":"",
         "ch":"",
         "kr":"",
-        "ru":"Требуемый Класс",
+        "ru":"",
         "tr":"",
-        "de":"",
+        "de":"Klasse erforderlich",
         "jp":"",
         "pt":"",
         "vi":"Vai trò",
@@ -38,12 +38,12 @@
     "tooltip.item.gender":{
         "en":"Required Gender",
         "fr":"Genre Requis",
-        "es":"Sexo",
+        "es":"",
         "ch":"",
         "kr":"",
-        "ru":"Требуемый Пол",
+        "ru":"",
         "tr":"",
-        "de":"",
+        "de":"Erforderlicher Typ",
         "jp":"",
         "pt":"",
         "vi":"Giới tính",
@@ -56,12 +56,12 @@
     "tooltip.item.level":{
         "en":"Required Lv",
         "fr":"Niveau Requis",
-        "es":"Nivel",
+        "es":"",
         "ch":"",
         "kr":"",
-        "ru":"Требуемый уровень",
+        "ru":"",
         "tr":"",
-        "de":"",
+        "de":"Erforderlicher Niveau",
         "jp":"",
         "pt":"",
         "vi":"Yêu cầu Lv",
@@ -70,95 +70,5 @@
         "pl":"",
         "th":"",
         "id":"Level yg dibutuhkan"
-    },
-    "tooltip.item.mod-stats":{
-        "en":"Mod Stats",
-        "fr":"Mod Stats",
-        "es":"",
-        "ch":"",
-        "kr":"",
-        "ru":"",
-        "tr":"",
-        "de":"",
-        "jp":"",
-        "pt":"",
-        "vi":"",
-        "ar":"",
-        "it":"",
-        "pl":"",
-        "th":"",
-        "id":""
-    },
-    "tooltip.item.ench-stats":{
-        "en":"ENCH Stats",
-        "fr":"AMELIO Stats",
-        "es":"",
-        "ch":"",
-        "kr":"",
-        "ru":"",
-        "tr":"",
-        "de":"",
-        "jp":"",
-        "pt":"",
-        "vi":"",
-        "ar":"",
-        "it":"",
-        "pl":"",
-        "th":"",
-        "id":""
-    },
-    "tooltip.skill.passive":{
-        "en":"Passive",
-        "fr":"Passif",
-        "es":"Pasivo",
-        "ch":"",
-        "kr":"",
-        "ru":"Пассивный",
-        "tr":"",
-        "de":"",
-        "jp":"",
-        "pt":"",
-        "vi":"Bị động",
-        "ar":"",
-        "it":"",
-        "pl":"",
-        "th":"",
-        "id":"Pasif"
-    },
-    "tooltip.skill.cooldown":{
-        "en":"{0} sec cooldown",
-        "fr":"{0} sec de recharge",
-        "es":"{0} sec para Utilizar",
-        "ch":"",
-        "kr":"",
-        "ru":"{0} сек перезарядка",
-        "tr":"",
-        "de":"",
-        "jp":"",
-        "pt":"",
-        "vi":"Thời gian hồi chiêu {0} giây",
-        "ar":"",
-        "it":"",
-        "pl":"",
-        "th":"",
-        "id":"CD {0} detik "
-    },
-    "tooltip.skill.instant":{
-        "en":"Instant",
-        "fr":"Instantané",
-        "es":"Instantáneo",
-        "ch":"",
-        "kr":"",
-        "ru":"Мгновенный",
-        "tr":"",
-        "de":"",
-        "jp":"",
-        "pt":"",
-        "vi":"Lập tức",
-        "ar":"",
-        "it":"",
-        "pl":"",
-        "th":"",
-        "id":"Instan"
     }
 }
