--- a/Translation/general.json
+++ b/Translation/general.json
@@ -7,7 +7,7 @@
         "kr":"",
         "ru":"Гильдия",
         "tr":"",
-        "de":"",
+        "de":"Gilde",
         "jp":"",
         "pt":"",
         "vi":"Bang Hội",
@@ -25,7 +25,7 @@
         "kr":"",
         "ru":"Группа",
         "tr":"",
-        "de":"",
+        "de":"Gruppe",
         "jp":"",
         "pt":"",
         "vi":"Đội",
@@ -43,7 +43,7 @@
         "kr":"",
         "ru":"Золото",
         "tr":"",
-        "de":"",
+        "de":"Gold",
         "jp":"",
         "pt":"",
         "vi":"Vàng",
@@ -59,9 +59,9 @@
         "es":"",
         "ch":"",
         "kr":"",
-        "ru":"Жетон",
+        "ru":"",
         "tr":"",
-        "de":"",
+        "de":"Token",
         "jp":"",
         "pt":"",
         "vi":"KNB",
@@ -77,9 +77,9 @@
         "es":"",
         "ch":"",
         "kr":"",
-        "ru":"Жетоны",
+        "ru":"",
         "tr":"",
-        "de":"",
+        "de":"Tokens",
         "jp":"",
         "pt":"",
         "vi":"KNB",
@@ -97,7 +97,7 @@
         "kr":"",
         "ru":"Купон",
         "tr":"",
-        "de":"",
+        "de":"Gutschein",
         "jp":"",
         "pt":"",
         "vi":"Lễ Kim",
@@ -113,9 +113,9 @@
         "es":"Cupones",
         "ch":"",
         "kr":"",
-        "ru":"Купоны",
+        "ru":"",
         "tr":"",
-        "de":"",
+        "de":"Gutscheine",
         "jp":"",
         "pt":"",
         "vi":"Lễ Kim",
@@ -133,7 +133,7 @@
         "kr":"",
         "ru":"Опыт",
         "tr":"",
-        "de":"",
+        "de":"Exp",
         "jp":"",
         "pt":"",
         "vi":"Kinh nghiệm",
@@ -146,12 +146,12 @@
     "general.POINT.MAGIPOINT":{
         "en":"Magipoint",
         "fr":"Magie noire",
-        "es":"Puntos Magicos",
+        "es":"Magia Negra",
         "ch":"",
         "kr":"",
         "ru":"Магипоинт",
         "tr":"",
-        "de":"",
+        "de":"Schwarze Magie",
         "jp":"",
         "pt":"",
         "vi":"Điểm kỹ năng",
@@ -169,7 +169,7 @@
         "kr":"",
         "ru":"Получить вознаграждение",
         "tr":"",
-        "de":"",
+        "de":"Die Belohnung erhalten",
         "jp":"",
         "pt":"",
         "vi":"Nhận Thưởng",
@@ -182,12 +182,12 @@
     "general.quest.reward":{
         "en":"Quest Reward",
         "fr":"Récompense de quête",
-        "es":"Recompensa de misión",
+        "es":"Recompensa de quest",
         "ch":"",
         "kr":"",
         "ru":"Награда за задание",
         "tr":"",
-        "de":"",
+        "de":"Quest-Belohnung",
         "jp":"",
         "pt":"",
         "vi":"Phần thưởng",
@@ -203,9 +203,9 @@
         "es":"Guerrero",
         "ch":"",
         "kr":"",
-        "ru":"Воин",
+        "ru":"",
         "tr":"",
-        "de":"",
+        "de":"Krieger",
         "jp":"",
         "pt":"",
         "vi":"Chiến Sĩ",
@@ -221,9 +221,9 @@
         "es":"Arquero",
         "ch":"",
         "kr":"",
-        "ru":"Лучник",
+        "ru":"",
         "tr":"",
-        "de":"",
+        "de":"Bogenschütze",
         "jp":"",
         "pt":"",
         "vi":"Cung Thủ",
@@ -239,9 +239,9 @@
         "es":"Mago",
         "ch":"",
         "kr":"",
-        "ru":"Маг",
+        "ru":"",
         "tr":"",
-        "de":"",
+        "de":"Magier",
         "jp":"",
         "pt":"",
         "vi":"Pháp Sư",
@@ -257,9 +257,9 @@
         "es":"H",
         "ch":"",
         "kr":"",
-        "ru":"М",
+        "ru":"",
         "tr":"",
-        "de":"",
+        "de":"M",
         "jp":"",
         "pt":"",
         "vi":"Nam",
@@ -275,9 +275,9 @@
         "es":"M",
         "ch":"",
         "kr":"",
-        "ru":"Ж",
+        "ru":"",
         "tr":"",
-        "de":"",
+        "de":"F",
         "jp":"",
         "pt":"",
         "vi":"Nữ",
@@ -293,9 +293,9 @@
         "es":"Nivel",
         "ch":"",
         "kr":"",
-        "ru":"Уровень",
+        "ru":"",
         "tr":"",
-        "de":"",
+        "de":"Level",
         "jp":"",
         "pt":"",
         "vi":"Cấp độ",
@@ -308,15 +308,15 @@
     "general.level.short":{
         "en":"Lv.",
         "fr":"Nv.",
-        "es":"Nv",
+        "es":"Nv.",
         "ch":"",
         "kr":"",
-        "ru":"Ур.",
+        "ru":"",
         "tr":"",
-        "de":"",
+        "de":"Lv.",
         "jp":"",
         "pt":"",
-        "vi":"Lv",
+        "vi":"Lv.",
         "ar":"",
         "it":"",
         "pl":"",
@@ -325,13 +325,13 @@
     },
     "general.bind.boe":{
         "en":"Bind on Equip",
-        "fr":"Lié quand Équipé",
-        "es":"Enlazar al Equipar",
+        "fr":"Lier si Équipé",
+        "es":"Enlace si está equipado",
         "ch":"",
         "kr":"",
-        "ru":"Привязывается при экипировке",
+        "ru":"",
         "tr":"",
-        "de":"",
+        "de":"Link falls ausgestattet",
         "jp":"",
         "pt":"",
         "vi":"Khóa khi Trang bị",
@@ -343,13 +343,13 @@
     },
     "general.bind.bop":{
         "en":"Bind on Pickup",
-        "fr":"Lié quand Ramassé",
-        "es":"Enlazar al recoger",
+        "fr":"Lier si Ramassé",
+        "es":"Enlace si está recoger",
         "ch":"",
         "kr":"",
-        "ru":"Привязывается при поднятии",
+        "ru":"",
         "tr":"",
-        "de":"",
+        "de":"Link falls sammeln",
         "jp":"",
         "pt":"",
         "vi":"Khóa khi nhặt lên",
@@ -361,13 +361,13 @@
     },
     "general.bind.bound":{
         "en":"Bound",
-        "fr":"Lié",
-        "es":"Unido",
+        "fr":"Lier",
+        "es":"Enlace",
         "ch":"",
         "kr":"",
-        "ru":"Привязан",
+        "ru":"",
         "tr":"",
-        "de":"",
+        "de":"Link",
         "jp":"",
         "pt":"",
         "vi":"Khóa",
@@ -383,9 +383,9 @@
         "es":"Paz",
         "ch":"",
         "kr":"",
-        "ru":"Мирный",
+        "ru":"",
         "tr":"",
-        "de":"",
+        "de":"Frieden",
         "jp":"",
         "pt":"",
         "vi":"Hòa",
@@ -398,12 +398,12 @@
     "general.pvpmode.pk":{
         "en":"PK",
         "fr":"PVP",
-        "es":"PVP",
+        "es":"PK",
         "ch":"",
         "kr":"",
-        "ru":"ПВП",
+        "ru":"",
         "tr":"",
-        "de":"",
+        "de":"SK",
         "jp":"",
         "pt":"",
         "vi":"PK",
@@ -419,37 +419,37 @@
         "es":"Vender {0}",
         "ch":"",
         "kr":"",
-        "ru":"Продать {0}",
+        "ru":"",
         "tr":"",
-        "de":"",
+        "de":"Verkaufen Sie {0}",
         "jp":"",
         "pt":"",
-        "vi":"Bán {0}",
+        "vi":"",
         "ar":"",
         "it":"",
         "pl":"",
         "th":"",
-        "id":"Jual {0}"
+        "id":""
     },
-    "general.item.sell.confirm":{
+	"general.item.sell.confirm":{
         "en":"Confirm sale {0} to get {1} Gold ?",
         "fr":"Confirmer vendre {0} pour obtenir {1} Or ?",
-        "es":"¿Confirmar venta {0} para obtener {1} oro?",
+        "es":"Confirme la venta de {0} para Obtener {1} Oro ?",
         "ch":"",
         "kr":"",
-        "ru":"Поддтверждаете продажу {0} за {1} золота?",
+        "ru":"",
         "tr":"",
-        "de":"",
+        "de":"Bestätigen Sie den Verkauf von {0}, um {1} Gold zu erhalten ?",
         "jp":"",
         "pt":"",
-        "vi":"Bạn có muốn bán {0} để nhận {1} vàng?",
+        "vi":"",
         "ar":"",
         "it":"",
         "pl":"",
         "th":"",
-        "id":"Konfirmasi penjualan {0} untuk mendapatkan {1} Emas?"
+        "id":""
     },
-    "general.buy":{
+   "general.buy":{
         "en":"Buy",
         "fr":"Acheter",
         "es":"Comprar",
@@ -457,7 +457,7 @@
         "kr":"",
         "ru":"Купить",
         "tr":"",
-        "de":"",
+        "de":"Kaufen",
         "jp":"",
         "pt":"",
         "vi":"Mua",
@@ -467,42 +467,6 @@
         "th":"",
         "id":"Membeli"
     },
-    "general.accept":{
-        "en":"Accept",
-        "fr":"Accepter",
-        "es":"",
-        "ch":"",
-        "kr":"",
-        "ru":"",
-        "tr":"",
-        "de":"",
-        "jp":"",
-        "pt":"",
-        "vi":"",
-        "ar":"",
-        "it":"",
-        "pl":"",
-        "th":"",
-        "id":""
-    },
-    "general.cancel":{
-        "en":"Cancel",
-        "fr":"Annuler",
-        "es":"",
-        "ch":"",
-        "kr":"",
-        "ru":"",
-        "tr":"",
-        "de":"",
-        "jp":"",
-        "pt":"",
-        "vi":"",
-        "ar":"",
-        "it":"",
-        "pl":"",
-        "th":"",
-        "id":""
-    },
     "general.cost.none":{
         "en":"No cost",
         "fr":"Aucun coût",
@@ -511,7 +475,7 @@
         "kr":"",
         "ru":"Бесплатно",
         "tr":"",
-        "de":"",
+        "de":"Keine Kosten",
         "jp":"",
         "pt":"",
         "vi":"Không tốn tiền",
@@ -529,7 +493,7 @@
         "kr":"",
         "ru":"Ярд",
         "tr":"",
-        "de":"",
+        "de":"Meter",
         "jp":"",
         "pt":"",
         "vi":"Thước",
@@ -547,7 +511,7 @@
         "kr":"",
         "ru":"Секунда",
         "tr":"",
-        "de":"",
+        "de":"Sekunde",
         "jp":"",
         "pt":"",
         "vi":"giây",
@@ -565,7 +529,7 @@
         "kr":"",
         "ru":"Сек",
         "tr":"",
-        "de":"",
+        "de":"Sek",
         "jp":"",
         "pt":"",
         "vi":"s",
@@ -583,7 +547,7 @@
         "kr":"",
         "ru":"Минута",
         "tr":"",
-        "de":"",
+        "de":"Minute",
         "jp":"",
         "pt":"",
         "vi":"Phút",
@@ -601,7 +565,7 @@
         "kr":"",
         "ru":"Мин",
         "tr":"",
-        "de":"",
+        "de":"Min",
         "jp":"",
         "pt":"",
         "vi":"Phút",
