--- a/Translation/general.json
+++ b/Translation/general.json
@@ -1,4 +1,4 @@
-﻿{
+{
     "general.guild":{
         "en":"Guild",
         "fr":"Guilde",
@@ -59,7 +59,7 @@
         "es":"",
         "ch":"",
         "kr":"",
-        "ru":"",
+        "ru":"Жетон",
         "tr":"",
         "de":"Token",
         "jp":"",
@@ -77,7 +77,7 @@
         "es":"",
         "ch":"",
         "kr":"",
-        "ru":"",
+        "ru":"Жетоны",
         "tr":"",
         "de":"Tokens",
         "jp":"",
@@ -113,7 +113,7 @@
         "es":"Cupones",
         "ch":"",
         "kr":"",
-        "ru":"",
+        "ru":"Купоны",
         "tr":"",
         "de":"Gutscheine",
         "jp":"",
@@ -146,7 +146,7 @@
     "general.POINT.MAGIPOINT":{
         "en":"Magipoint",
         "fr":"Magie noire",
-        "es":"Magia Negra",
+        "es":"Puntos Magicos",
         "ch":"",
         "kr":"",
         "ru":"Магипоинт",
@@ -182,7 +182,7 @@
     "general.quest.reward":{
         "en":"Quest Reward",
         "fr":"Récompense de quête",
-        "es":"Recompensa de quest",
+        "es":"Recompensa de misión",
         "ch":"",
         "kr":"",
         "ru":"Награда за задание",
@@ -203,7 +203,7 @@
         "es":"Guerrero",
         "ch":"",
         "kr":"",
-        "ru":"",
+        "ru":"Воин",
         "tr":"",
         "de":"Krieger",
         "jp":"",
@@ -221,7 +221,7 @@
         "es":"Arquero",
         "ch":"",
         "kr":"",
-        "ru":"",
+        "ru":"Лучник",
         "tr":"",
         "de":"Bogenschütze",
         "jp":"",
@@ -239,7 +239,7 @@
         "es":"Mago",
         "ch":"",
         "kr":"",
-        "ru":"",
+        "ru":"Маг",
         "tr":"",
         "de":"Magier",
         "jp":"",
@@ -257,7 +257,7 @@
         "es":"H",
         "ch":"",
         "kr":"",
-        "ru":"",
+        "ru":"M",
         "tr":"",
         "de":"M",
         "jp":"",
@@ -275,7 +275,7 @@
         "es":"M",
         "ch":"",
         "kr":"",
-        "ru":"",
+        "ru":"Ж",
         "tr":"",
         "de":"F",
         "jp":"",
@@ -293,7 +293,7 @@
         "es":"Nivel",
         "ch":"",
         "kr":"",
-        "ru":"",
+        "ru":"Уровень",
         "tr":"",
         "de":"Level",
         "jp":"",
@@ -311,7 +311,7 @@
         "es":"Nv.",
         "ch":"",
         "kr":"",
-        "ru":"",
+        "ru":"Ур.",
         "tr":"",
         "de":"Lv.",
         "jp":"",
@@ -325,11 +325,11 @@
     },
     "general.bind.boe":{
         "en":"Bind on Equip",
-        "fr":"Lier si Équipé",
-        "es":"Enlace si está equipado",
+        "fr":"Lié quand Équipé",
+        "es":"Enlazar al Equipar",
         "ch":"",
         "kr":"",
-        "ru":"",
+        "ru":"Привязывается при экипировке",
         "tr":"",
         "de":"Link falls ausgestattet",
         "jp":"",
@@ -343,11 +343,11 @@
     },
     "general.bind.bop":{
         "en":"Bind on Pickup",
-        "fr":"Lier si Ramassé",
-        "es":"Enlace si está recoger",
+        "fr":"Lié quand Ramassé",
+        "es":"Enlazar al recoger",
         "ch":"",
         "kr":"",
-        "ru":"",
+        "ru":"Привязывается при поднятии",
         "tr":"",
         "de":"Link falls sammeln",
         "jp":"",
@@ -361,11 +361,11 @@
     },
     "general.bind.bound":{
         "en":"Bound",
-        "fr":"Lier",
-        "es":"Enlace",
+        "fr":"Lié",
+        "es":"Unido",
         "ch":"",
         "kr":"",
-        "ru":"",
+        "ru":"Привязан",
         "tr":"",
         "de":"Link",
         "jp":"",
@@ -383,7 +383,7 @@
         "es":"Paz",
         "ch":"",
         "kr":"",
-        "ru":"",
+        "ru":"Мирный",
         "tr":"",
         "de":"Frieden",
         "jp":"",
@@ -398,10 +398,10 @@
     "general.pvpmode.pk":{
         "en":"PK",
         "fr":"PVP",
-        "es":"PK",
+        "es":"PVP",
         "ch":"",
         "kr":"",
-        "ru":"",
+        "ru":"ПВП",
         "tr":"",
         "de":"SK",
         "jp":"",
@@ -419,35 +419,35 @@
         "es":"Vender {0}",
         "ch":"",
         "kr":"",
-        "ru":"",
+        "ru":"Продать {0}",
         "tr":"",
         "de":"Verkaufen Sie {0}",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Bán {0}",
         "ar":"",
         "it":"",
         "pl":"",
         "th":"",
-        "id":""
+        "id":"Jual {0}"
     },
 	"general.item.sell.confirm":{
         "en":"Confirm sale {0} to get {1} Gold ?",
         "fr":"Confirmer vendre {0} pour obtenir {1} Or ?",
-        "es":"Confirme la venta de {0} para Obtener {1} Oro ?",
+        "es":"¿Confirmar venta {0} para obtener {1} oro?",
         "ch":"",
         "kr":"",
-        "ru":"",
+        "ru":"Поддтверждаете продажу {0} за {1} золота?",
         "tr":"",
         "de":"Bestätigen Sie den Verkauf von {0}, um {1} Gold zu erhalten ?",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Bạn có muốn bán {0} để nhận {1} vàng?",
         "ar":"",
         "it":"",
         "pl":"",
         "th":"",
-        "id":""
+        "id":"Konfirmasi penjualan {0} untuk mendapatkan {1} Emas?"
     },
    "general.buy":{
         "en":"Buy",
@@ -466,6 +466,42 @@
         "pl":"",
         "th":"",
         "id":"Membeli"
+    },
+    "general.accept":{
+        "en":"Accept",
+        "fr":"Accepter",
+        "es":"",
+        "ch":"",
+        "kr":"",
+        "ru":"",
+        "tr":"",
+        "de":"",
+        "jp":"",
+        "pt":"",
+        "vi":"",
+        "ar":"",
+        "it":"",
+        "pl":"",
+        "th":"",
+        "id":""
+    },
+    "general.cancel":{
+        "en":"Cancel",
+        "fr":"Annuler",
+        "es":"",
+        "ch":"",
+        "kr":"",
+        "ru":"",
+        "tr":"",
+        "de":"",
+        "jp":"",
+        "pt":"",
+        "vi":"",
+        "ar":"",
+        "it":"",
+        "pl":"",
+        "th":"",
+        "id":""
     },
     "general.cost.none":{
         "en":"No cost",
