--- a/Translation/tooltip.json
+++ b/Translation/tooltip.json
@@ -1,11 +1,11 @@
-﻿{
+{
     "tooltip.item.position":{
         "en":"Gear Position",
         "fr":"Emplacement",
-        "es":"",
+        "es":"Posicion",
         "ch":"",
         "kr":"",
-        "ru":"",
+        "ru":"Слот Экипировки",
         "tr":"",
         "de":"Standort",
         "jp":"",
@@ -20,10 +20,10 @@
     "tooltip.item.class":{
         "en":"Required Class",
         "fr":"Classe Requise",
-        "es":"",
+        "es":"Clase",
         "ch":"",
         "kr":"",
-        "ru":"",
+        "ru":"Требуемый Класс",
         "tr":"",
         "de":"Klasse erforderlich",
         "jp":"",
@@ -38,10 +38,10 @@
     "tooltip.item.gender":{
         "en":"Required Gender",
         "fr":"Genre Requis",
-        "es":"",
+        "es":"Sexo",
         "ch":"",
         "kr":"",
-        "ru":"",
+        "ru":"Требуемый Пол",
         "tr":"",
         "de":"Erforderlicher Typ",
         "jp":"",
@@ -56,10 +56,10 @@
     "tooltip.item.level":{
         "en":"Required Lv",
         "fr":"Niveau Requis",
-        "es":"",
+        "es":"Nivel",
         "ch":"",
         "kr":"",
-        "ru":"",
+        "ru":"Требуемый уровень",
         "tr":"",
         "de":"Erforderlicher Niveau",
         "jp":"",
@@ -70,5 +70,95 @@
         "pl":"",
         "th":"",
         "id":"Level yg dibutuhkan"
+    },
+    "tooltip.item.mod-stats":{
+        "en":"Mod Stats",
+        "fr":"Mod Stats",
+        "es":"",
+        "ch":"",
+        "kr":"",
+        "ru":"",
+        "tr":"",
+        "de":"",
+        "jp":"",
+        "pt":"",
+        "vi":"",
+        "ar":"",
+        "it":"",
+        "pl":"",
+        "th":"",
+        "id":""
+    },
+    "tooltip.item.ench-stats":{
+        "en":"ENCH Stats",
+        "fr":"AMELIO Stats",
+        "es":"",
+        "ch":"",
+        "kr":"",
+        "ru":"",
+        "tr":"",
+        "de":"",
+        "jp":"",
+        "pt":"",
+        "vi":"",
+        "ar":"",
+        "it":"",
+        "pl":"",
+        "th":"",
+        "id":""
+    },
+    "tooltip.skill.passive":{
+        "en":"Passive",
+        "fr":"Passif",
+        "es":"Pasivo",
+        "ch":"",
+        "kr":"",
+        "ru":"Пассивный",
+        "tr":"",
+        "de":"",
+        "jp":"",
+        "pt":"",
+        "vi":"Bị động",
+        "ar":"",
+        "it":"",
+        "pl":"",
+        "th":"",
+        "id":"Pasif"
+    },
+    "tooltip.skill.cooldown":{
+        "en":"{0} sec cooldown",
+        "fr":"{0} sec de recharge",
+        "es":"{0} sec para Utilizar",
+        "ch":"",
+        "kr":"",
+        "ru":"{0} сек перезарядка",
+        "tr":"",
+        "de":"",
+        "jp":"",
+        "pt":"",
+        "vi":"Thời gian hồi chiêu {0} giây",
+        "ar":"",
+        "it":"",
+        "pl":"",
+        "th":"",
+        "id":"CD {0} detik "
+    },
+    "tooltip.skill.instant":{
+        "en":"Instant",
+        "fr":"Instantané",
+        "es":"Instantáneo",
+        "ch":"",
+        "kr":"",
+        "ru":"Мгновенный",
+        "tr":"",
+        "de":"",
+        "jp":"",
+        "pt":"",
+        "vi":"Lập tức",
+        "ar":"",
+        "it":"",
+        "pl":"",
+        "th":"",
+        "id":"Instan"
     }
 }
