--- a/Translation/UI.json
+++ b/Translation/UI.json
@@ -1,39 +1,39 @@
 {
     "UI.chat.whisper_to":{
-        "en":"You say to %s",
-        "fr":"Vous dites à %s",
-        "es":"Estás diciendo a %s",
+        "en":"You say to {0}",
+        "fr":"Vous dites à {0}",
+        "es":"Estás diciendo a{0}",
         "ch":"",
         "kr":"",
-        "ru":"Вы говорите с %s",
+        "ru":"Вы говорите с {0}",
         "tr":"",
-        "de":"Sagen Sie %s",
+        "de":"Sagen Sie {0}",
         "jp":"",
         "pt":"",
-        "vi":"Bạn nói với %s",
+        "vi":"Bạn nói với {0}",
         "ar":"",
         "it":"",
         "pl":"",
         "th":"",
-        "id":"Katakan kepadanya %s"
+        "id":"Katakan kepadanya {0}",
     },
     "UI.chat.whisper_from":{
-        "en":"%s says",
-        "fr":"%s vous dit",
-        "es":"%s te dice",
+        "en":"{0} says",
+        "fr":"{0} vous dit",
+        "es":"{0} te dice",
         "ch":"",
         "kr":"",
-        "ru":"%s говорит",
+        "ru":"{0} говорит",
         "tr":"",
-        "de":"%s sagt Ihnen",
+        "de":"{0} sagt Ihnen",
         "jp":"",
         "pt":"",
-        "vi":"%s nói",
+        "vi":"{0} nói",
         "ar":"",
         "it":"",
         "pl":"",
         "th":"",
-        "id":"%s seperti itu"
+        "id":"{0} seperti itu"
     },
     "UI.chat.channel.local":{
         "en":"Local",
@@ -110,7 +110,7 @@
     "UI.chat.channel.guild":{
         "en":"Guild",
         "fr":"Guilde",
-        "es":"Guild",
+        "es":"Gremio",
         "ch":"",
         "kr":"",
         "ru":"Гильдия",
@@ -182,7 +182,7 @@
     "UI.stat.MP":{
         "en":"MP",
         "fr":"PM",
-        "es":"",
+        "es":"MP",
         "ch":"魔法值",
         "kr":"",
         "ru":"Мана",
@@ -200,7 +200,7 @@
     "UI.stat.EXP":{
         "en":"EXP",
         "fr":"EXP",
-        "es":"",
+        "es":"EXP",
         "ch":"经验值",
         "kr":"",
         "ru":"ОПТ",
@@ -218,7 +218,7 @@
     "UI.stat.SPD":{
         "en":"SPD",
         "fr":"VIT",
-        "es":"",
+        "es":"SPD",
         "ch":"",
         "kr":"",
         "ru":"Скорость",
@@ -307,7 +307,7 @@
     },
     "UI.stat.ENHCDMG":{
         "en":"Enhanced Damage",
-        "fr":"Dégâts Augmentés",
+        "fr":"Dégâts Améliorés",
         "es":"Daño mejorado",
         "ch":"伤害增强",
         "kr":"강화 된 손상",
@@ -379,7 +379,7 @@
     },
     "UI.stat.ATKSPD":{
         "en":"Attack Speed",
-        "fr":"Vittesse d'attaque",
+        "fr":"Vitesse d'attaque",
         "es":"Velocidad de ataque",
         "ch":"攻击速度",
         "kr":"공격 속도",
@@ -542,7 +542,7 @@
     "UI.stat.EVA.short":{
         "en":"EVA",
         "fr":"ESQ",
-        "es":"",
+        "es":"EVA",
         "ch":"闪避",
         "kr":"",
         "ru":"УКЛ",
@@ -563,8 +563,8 @@
         "es":"Evasión de habilidades",
         "ch":"技能闪避",
         "kr":"스킬 회피",
-        "ru":"",
         "tr":"Уклониене от навыка",
+        "ru":"",
         "de":"Kompetenz-Abweichung",
         "jp":"",
         "pt":"",
@@ -938,7 +938,7 @@
     "UI.stat.LUCK.short":{
         "en":"Luck",
         "fr":"Chance",
-        "es":"",
+        "es":"Suerte",
         "ch":"幸运值",
         "kr":"",
         "ru":"УДАЧА",
@@ -959,7 +959,7 @@
         "es":"",
         "ch":"",
         "kr":"",
-        "ru":"",
+        "ru":"Квест",
         "tr":"",
         "de":"Quests",
         "jp":"",
@@ -977,7 +977,7 @@
         "es":"",
         "ch":"",
         "kr":"",
-        "ru":"",
+        "ru":"Увеличение",
         "tr":"",
         "de":"Wachstum",
         "jp":"",
@@ -995,7 +995,7 @@
         "es":"",
         "ch":"",
         "kr":"",
-        "ru":"",
+        "ru":"Доступно",
         "tr":"",
         "de":"Verfügbar",
         "jp":"",
@@ -1013,7 +1013,7 @@
         "es":"",
         "ch":"",
         "kr":"",
-        "ru":"",
+        "ru":"Задача Квеста",
         "tr":"",
         "de":"Quest-Ziel",
         "jp":"",
@@ -1031,7 +1031,7 @@
         "es":"",
         "ch":"",
         "kr":"",
-        "ru":"",
+        "ru":"Награда за задание",
         "tr":"",
         "de":"Quest-Belohnung",
         "jp":"",
@@ -1049,7 +1049,7 @@
         "es":"",
         "ch":"",
         "kr":"",
-        "ru":"",
+        "ru":"Поисание Квеста",
         "tr":"",
         "de":"Quest-Beschreibung",
         "jp":"",
@@ -1067,7 +1067,7 @@
         "es":"",
         "ch":"",
         "kr":"",
-        "ru":"",
+        "ru":"Выполнено",
         "tr":"",
         "de":"ENDE",
         "jp":"",
@@ -1085,7 +1085,7 @@
         "es":"",
         "ch":"",
         "kr":"",
-        "ru":"",
+        "ru":"Главный Квест",
         "tr":"",
         "de":"Hauptquest",
         "jp":"",
@@ -1103,7 +1103,7 @@
         "es":"",
         "ch":"",
         "kr":"",
-        "ru":"",
+        "ru":"Второстепенный Квест",
         "tr":"",
         "de":"Zweitquest",
         "jp":"",
@@ -1121,7 +1121,7 @@
         "es":"",
         "ch":"",
         "kr":"",
-        "ru":"",
+        "ru":"Квест Способности",
         "tr":"",
         "de":"Talent-Quest",
         "jp":"",
@@ -1139,7 +1139,7 @@
         "es":"",
         "ch":"",
         "kr":"",
-        "ru":"",
+        "ru":"Ежедневный Квест",
         "tr":"",
         "de":"Tägliches Quest",
         "jp":"",
@@ -1157,7 +1157,7 @@
         "es":"",
         "ch":"",
         "kr":"",
-        "ru":"",
+        "ru":"Квест Гильдии",
         "tr":"",
         "de":"Gildenquest",
         "jp":"",
@@ -1175,7 +1175,7 @@
         "es":"",
         "ch":"",
         "kr":"",
-        "ru":"",
+        "ru":"Персонаж",
         "tr":"",
         "de":"Charakter",
         "jp":"",
@@ -1193,7 +1193,7 @@
         "es":"",
         "ch":"",
         "kr":"",
-        "ru":"",
+        "ru":"Экипировка",
         "tr":"",
         "de":"Ausrüstung",
         "jp":"",
@@ -1211,7 +1211,7 @@
         "es":"",
         "ch":"",
         "kr":"",
-        "ru":"",
+        "ru":"Благословение",
         "tr":"",
         "de":"Segen",
         "jp":"",
@@ -1229,7 +1229,7 @@
         "es":"",
         "ch":"",
         "kr":"",
-        "ru":"",
+        "ru":"Доблесть",
         "tr":"",
         "de":"Tapferkeit",
         "jp":"",
@@ -1247,7 +1247,7 @@
         "es":"",
         "ch":"",
         "kr":"",
-        "ru":"",
+        "ru":"Элемент",
         "tr":"",
         "de":"Element",
         "jp":"",
@@ -1261,11 +1261,11 @@
     },
     "UI.windows.bag.title":{
         "en":"Bag",
-        "fr":"Inventaire",
+        "fr":"Sac",
         "es":"",
         "ch":"",
         "kr":"",
-        "ru":"",
+        "ru":"Инвентарь",
         "tr":"",
         "de":"Inventar",
         "jp":"",
@@ -1283,7 +1283,7 @@
         "es":"",
         "ch":"",
         "kr":"",
-        "ru":"",
+        "ru":"Все",
         "tr":"",
         "de":"Alle",
         "jp":"",
@@ -1301,7 +1301,7 @@
         "es":"",
         "ch":"",
         "kr":"",
-        "ru":"",
+        "ru":"Экипировка",
         "tr":"",
         "de":"Zahnrad",
         "jp":"",
@@ -1319,7 +1319,7 @@
         "es":"",
         "ch":"",
         "kr":"",
-        "ru":"",
+        "ru":"Зелья",
         "tr":"",
         "de":"Trank",
         "jp":"",
@@ -1337,7 +1337,7 @@
         "es":"",
         "ch":"",
         "kr":"",
-        "ru":"",
+        "ru":"Материалы",
         "tr":"",
         "de":"Matl.",
         "jp":"",
@@ -1355,7 +1355,7 @@
         "es":"",
         "ch":"",
         "kr":"",
-        "ru":"",
+        "ru":"Дух",
         "tr":"",
         "de":"Geist",
         "jp":"",
@@ -1373,7 +1373,7 @@
         "es":"",
         "ch":"",
         "kr":"",
-        "ru":"",
+        "ru":"Квест",
         "tr":"",
         "de":"Quest",
         "jp":"",
@@ -1391,7 +1391,7 @@
         "es":"",
         "ch":"",
         "kr":"",
-        "ru":"",
+        "ru":"Разное",
         "tr":"",
         "de":"Diverses",
         "jp":"",
@@ -1405,11 +1405,11 @@
     },
     "UI.windows.bag.capacity":{
         "en":"Bag Capacity",
-        "fr":"Capacitée",
+        "fr":"Capacité",
         "es":"",
         "ch":"",
         "kr":"",
-        "ru":"",
+        "ru":"Вместимость Инвентаря",
         "tr":"",
         "de":"Beutel-Kapazität",
         "jp":"",
@@ -1427,7 +1427,7 @@
         "es":"",
         "ch":"",
         "kr":"",
-        "ru":"",
+        "ru":"Сортировать",
         "tr":"",
         "de":"Sortierung",
         "jp":"",
@@ -1445,7 +1445,7 @@
         "es":"",
         "ch":"",
         "kr":"",
-        "ru":"",
+        "ru":"Разделить",
         "tr":"",
         "de":"Geteilt",
         "jp":"",
@@ -1463,7 +1463,7 @@
         "es":"",
         "ch":"",
         "kr":"",
-        "ru":"",
+        "ru":"Укрепление",
         "tr":"",
         "de":"Befestigung",
         "jp":"",
@@ -1481,7 +1481,7 @@
         "es":"",
         "ch":"",
         "kr":"",
-        "ru":"",
+        "ru":"Оптовая Продажа",
         "tr":"",
         "de":"Bulk-Verkauf",
         "jp":"",
@@ -1499,7 +1499,7 @@
         "es":"",
         "ch":"",
         "kr":"",
-        "ru":"",
+        "ru":"Продажа",
         "tr":"",
         "de":"Verkauf",
         "jp":"",
@@ -1517,7 +1517,7 @@
         "es":"",
         "ch":"",
         "kr":"",
-        "ru":"",
+        "ru":"Донат",
         "tr":"",
         "de":"Gebühr",
         "jp":"",
@@ -1535,7 +1535,7 @@
         "es":"",
         "ch":"",
         "kr":"",
-        "ru":"",
+        "ru":"[Заперто]",
         "tr":"",
         "de":"[Gesperrt]",
         "jp":"",
@@ -1553,7 +1553,7 @@
         "es":"",
         "ch":"",
         "kr":"",
-        "ru":"",
+        "ru":"Руководство",
         "tr":"",
         "de":"Handbuch",
         "jp":"",
@@ -1571,7 +1571,7 @@
         "es":"",
         "ch":"",
         "kr":"",
-        "ru":"",
+        "ru":"Золото",
         "tr":"",
         "de":"Gold",
         "jp":"",
@@ -1589,7 +1589,7 @@
         "es":"",
         "ch":"",
         "kr":"",
-        "ru":"",
+        "ru":"Предмет",
         "tr":"",
         "de":"Objekt",
         "jp":"",
@@ -1607,7 +1607,7 @@
         "es":"",
         "ch":"",
         "kr":"",
-        "ru":"",
+        "ru":"Линия",
         "tr":"",
         "de":"Zeile",
         "jp":"",
@@ -1624,7 +1624,7 @@
         "fr":"Ln",
         "es":"",
         "ch":"",
-        "kr":"",
+        "kr":"Лн",
         "ru":"",
         "tr":"",
         "de":"Zl",
@@ -1643,7 +1643,7 @@
         "es":"",
         "ch":"",
         "kr":"",
-        "ru":"",
+        "ru":"Ремесло",
         "tr":"",
         "de":"",
         "jp":"",
@@ -1661,7 +1661,7 @@
         "es":"",
         "ch":"",
         "kr":"",
-        "ru":"",
+        "ru":"Оружие",
         "tr":"",
         "de":"",
         "jp":"",
@@ -1679,7 +1679,7 @@
         "es":"",
         "ch":"",
         "kr":"",
-        "ru":"",
+        "ru":"Броня",
         "tr":"",
         "de":"",
         "jp":"",
@@ -1697,7 +1697,7 @@
         "es":"",
         "ch":"",
         "kr":"",
-        "ru":"",
+        "ru":"Бижутерия",
         "tr":"",
         "de":"",
         "jp":"",
@@ -1715,7 +1715,7 @@
         "es":"",
         "ch":"",
         "kr":"",
-        "ru":"",
+        "ru":"Зелья",
         "tr":"",
         "de":"",
         "jp":"",
@@ -1733,7 +1733,7 @@
         "es":"",
         "ch":"",
         "kr":"",
-        "ru":"",
+        "ru":"Ездовой",
         "tr":"",
         "de":"",
         "jp":"",
@@ -1751,7 +1751,7 @@
         "es":"",
         "ch":"",
         "kr":"",
-        "ru":"",
+        "ru":"Крылья",
         "tr":"",
         "de":"",
         "jp":"",
@@ -1769,7 +1769,7 @@
         "es":"",
         "ch":"",
         "kr":"",
-        "ru":"",
+        "ru":"Изготовление",
         "tr":"",
         "de":"",
         "jp":"",
@@ -1787,7 +1787,7 @@
         "es":"",
         "ch":"",
         "kr":"",
-        "ru":"",
+        "ru":"Модификачия",
         "tr":"",
         "de":"",
         "jp":"",
@@ -1805,7 +1805,7 @@
         "es":"",
         "ch":"",
         "kr":"",
-        "ru":"",
+        "ru":"Требуемые материалы",
         "tr":"",
         "de":"",
         "jp":"",
@@ -1823,7 +1823,7 @@
         "es":"",
         "ch":"",
         "kr":"",
-        "ru":"",
+        "ru":"Требуемое Золото",
         "tr":"",
         "de":"",
         "jp":"",
@@ -1841,7 +1841,7 @@
         "es":"",
         "ch":"",
         "kr":"",
-        "ru":"",
+        "ru":"Уровень Ремесла",
         "tr":"",
         "de":"",
         "jp":"",
@@ -1859,7 +1859,7 @@
         "es":"",
         "ch":"",
         "kr":"",
-        "ru":"",
+        "ru":"Старт",
         "tr":"",
         "de":"",
         "jp":"",
@@ -1877,7 +1877,7 @@
         "es":"",
         "ch":"",
         "kr":"",
-        "ru":"",
+        "ru":"Стоп",
         "tr":"",
         "de":"",
         "jp":"",
@@ -1895,7 +1895,7 @@
         "es":"",
         "ch":"",
         "kr":"",
-        "ru":"",
+        "ru":"Подтверждение",
         "tr":"",
         "de":"",
         "jp":"",
@@ -1905,7 +1905,7 @@
         "it":"",
         "pl":"",
         "th":"",
-        "id":""
+        "id":"Konfirmasi"
     },
     "UI.windows.confirm":{
         "en":"Confirm",
@@ -1913,7 +1913,7 @@
         "es":"",
         "ch":"",
         "kr":"",
-        "ru":"",
+        "ru":"Подтвердить",
         "tr":"",
         "de":"",
         "jp":"",
@@ -1923,7 +1923,7 @@
         "it":"",
         "pl":"",
         "th":"",
-        "id":""
+        "id":"Ya"
     },
     "UI.windows.confirm.close":{
         "en":"Close",
@@ -1931,7 +1931,7 @@
         "es":"",
         "ch":"",
         "kr":"",
-        "ru":"",
+        "ru":"Закрыть",
         "tr":"",
         "de":"",
         "jp":"",
@@ -1941,7 +1941,7 @@
         "it":"",
         "pl":"",
         "th":"",
-        "id":""
+        "id":"Tutup"
     },
     "UI.windows.fair.title":{
         "en":"Fair",
@@ -1949,17 +1949,17 @@
         "es":"",
         "ch":"",
         "kr":"",
-        "ru":"",
+        "ru":"Ярмарка",
         "tr":"",
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Chợ",
         "ar":"",
         "it":"",
         "pl":"",
         "th":"",
-        "id":""
+        "id":"Adil"
     },
     "UI.windows.fair.tab.goldshop":{
         "en":"Gold Shop",
@@ -1967,17 +1967,17 @@
         "es":"",
         "ch":"",
         "kr":"",
-        "ru":"",
+        "ru":"Магазин",
         "tr":"",
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Vàng",
         "ar":"",
         "it":"",
         "pl":"",
         "th":"",
-        "id":""
+        "id":"Toko Emas"
     },
     "UI.windows.fair.tab.consign":{
         "en":"Consign.",
@@ -1985,17 +1985,17 @@
         "es":"",
         "ch":"",
         "kr":"",
-        "ru":"",
+        "ru":"Отправить",
         "tr":"",
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Gửi bán",
         "ar":"",
         "it":"",
         "pl":"",
         "th":"",
-        "id":""
+        "id":"Menyerahkan"
     },
     "UI.windows.fair.tab.ench":{
         "en":"Ench.",
@@ -2003,17 +2003,17 @@
         "es":"",
         "ch":"",
         "kr":"",
-        "ru":"",
+        "ru":"Аукцион",
         "tr":"",
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Đấu giá",
         "ar":"",
         "it":"",
         "pl":"",
         "th":"",
-        "id":""
+        "id":"Lelang"
     },
     "UI.windows.skills.title":{
         "en":"Skills",
