--- a/Translation/UI.json
+++ b/Translation/UI.json
@@ -15,7 +15,7 @@
         "it":"",
         "pl":"",
         "th":"",
-        "id":"Katakan kepadanya {0}",
+        "id":"Katakan kepadanya {0}"
     },
     "UI.chat.whisper_from":{
         "en":"{0} says",
