--- a/Translation/general.json
+++ b/Translation/general.json
@@ -478,7 +478,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Chấp nhận",
         "ar":"",
         "it":"",
         "pl":"",
@@ -496,7 +496,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Hủy",
         "ar":"",
         "it":"",
         "pl":"",
