--- a/Translation/skills.json
+++ b/Translation/skills.json
@@ -1954,7 +1954,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Thu thập linh hồn",
         "ar":"",
         "it":"",
         "pl":"",
@@ -1972,7 +1972,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Kích hoạt Thu thập linh hồn bạn có thể nhìn thấy linh hồn của mục tiêu khi giết quái vật. Cướp linh hồn cung cấp EXP và nhặt linh hồn cùng màu liên tiếp sẽ tăng điểm EXP.",
         "ar":"",
         "it":"",
         "pl":"",
@@ -1990,7 +1990,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Bạn chỉ có thể sử dụng 3 lần một ngày",
         "ar":"",
         "it":"",
         "pl":"",
@@ -2008,7 +2008,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Thời gian còn lại: {0} giây",
         "ar":"",
         "it":"",
         "pl":"",
@@ -2026,7 +2026,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Linh hồn còn lại: {0}",
         "ar":"",
         "it":"",
         "pl":"",
