--- a/Translation/UI.json
+++ b/Translation/UI.json
@@ -172,7 +172,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Gửi",
         "ar":"",
         "it":"",
         "pl":"",
