--- a/Translation/tooltip.json
+++ b/Translation/tooltip.json
@@ -82,7 +82,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Thuộc tính nâng cấp",
         "ar":"",
         "it":"",
         "pl":"",
@@ -100,7 +100,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Thuộc tính tăng cường",
         "ar":"",
         "it":"",
         "pl":"",
