--- a/Translation/skills.json
+++ b/Translation/skills.json
@@ -1468,7 +1468,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"Gust",
+        "vi":"Ném",
         "ar":"",
         "it":"",
         "pl":"",
