--- a/Translation/item.json
+++ b/Translation/item.json
@@ -4456,7 +4456,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Trái cây hoang dã",
         "ar":"",
         "it":"",
         "pl":"",
@@ -4474,7 +4474,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Thư nghi ngờ",
         "ar":"",
         "it":"",
         "pl":"",
