--- a/Translation/skills.json
+++ b/Translation/skills.json
@@ -783,8 +783,8 @@
         "tr":"",
         "de":"",
         "jp":"",
-        "pt":"Tăng sát thương với mục tiêu ở xa.",
-        "vi":"",
+        "pt":"",
+        "vi":"Tăng sát thương với mục tiêu ở xa.",
         "ar":"",
         "it":"",
         "pl":"",
